--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,13 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index-design.css">
+    <script src="../js/main.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
 <body>
-    <div class="flex-container">
-        <button class="button">Rätsel 1</button>
-        <button class="button">Rätsel 2</button>
+    <div class="flex-container d-flex justify-content-center align-items-center" id="progress-buttons">
+    </div>
+    <div>
+        <button type="button" class="btn btn-success" onclick="newButton()">Mehr Buttons</button>
     </div>
 </body>
 </html>
