damit burgi syncen kann

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- TODO das gear icon auf die selbe höhe wie den text bringen -->
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar">
         <div class="container-fluid">
             <a class="navbar-brand">ASG-Escape Room</a>
             <ul class="nav-item dropdown d-flex align-items-center">
@@ -33,8 +33,7 @@
         </div>
     </nav>
       
-    <div class="flex-container d-flex justify-content-center align-items-center" id="progress-buttons">
-    </div>
+    <div class="flex-container d-flex justify-content-center align-items-center" id="progress-buttons"></div>
     <div>
         <button type="button" class="btn btn-success" onclick="newButton()">Mehr Buttons</button>
     </div>
