--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="core/index-design.css">
-    <link rel="stylesheet" href="core/style.css">
+    <link rel="stylesheet" href="../css/index-design.css">
+    <script src="../js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
@@ -35,10 +35,8 @@
     </nav>
       
     <div class="flex-container d-flex justify-content-center align-items-center" id="progress-buttons"></div>
--->
-    <main>
-
-    </main>
-    <script type="module" type="text/javascript" src="core/app.js"></script>
+    -->
+    
+    <iframe src="scene-one.html" frameborder="0" width="100%" ></iframe>
 </body>
 </html>
