--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="core/index-design.css">
     <link rel="stylesheet" href="core/style.css">
+    <link rel="stylesheet" href="assets/styles/import.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
