--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,19 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
+    <!--
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    -->
     <link rel="stylesheet" href="core/index-design.css">
     <link rel="stylesheet" href="core/style.css">
+    <link rel="stylesheet" href="assets/styles/import.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
 <body>
 
     <!-- TODO das gear icon auf die selbe höhe wie den text bringen -->
+    <!--
     <nav class="navbar">
         <div class="container-fluid">
             <a class="navbar-brand">ASG-Escape Room</a>
@@ -34,6 +38,8 @@
     </nav>
       
     <div class="flex-container d-flex justify-content-center align-items-center" id="progress-buttons"></div>
+
+    -->
     
     <main>
 
