--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="core/style.css">
     <link rel="stylesheet" href="assets/styles/import.css">
+    <script type="module" src="/utils/showImagePopUp.js"></script>
+    <script type="module" src="core/app.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
 <body>
-    <main>
-
-    </main>
-    <script type="module" type="text/javascript" src="core/app.js"></script>
+    <custom-comp src="/components/Szene_01_Gasse/index.html"></custom-comp>
 </body>
 </html>
