--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="core/style.css">
     <link rel="stylesheet" href="assets/styles/import.css">
-    <script type="module" src="/utils/showImagePopUp.js"></script>
     <script type="module" src="core/app.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
 <body>
-    <custom-comp src="/components/Szene_01_Gasse/index.html"></custom-comp>
+    <custom-comp id="header" src="/components/header.html"></custom-comp>
 </body>
 </html>
