--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="core/style.css">
     <link rel="stylesheet" href="assets/styles/import.css">
     <script type="module" src="core/app.js"></script>
+    <script type="module" src="components/Szene_01_Gasse/index.js"></script>
     <title>ASG - Escape Room - Tag der offenen Tür</title>
 </head>
 <body>
     <custom-comp id="header" src="/components/header.html"></custom-comp>
+    <custom-comp src="/components/Szene_01_Gasse/"></custom-comp>
 </body>
 </html>
