--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="core/style.css">
     <link rel="stylesheet" href="assets/styles/import.css">
-    <script type="module" src="core/app.js"></script>
     <script type="module" src="components/Szene_01_Gasse/index.js"></script>
-    <title>ASG - Escape Room - Tag der offenen Tür</title>
+    <script type="module" src="core/app.js"></script>
+    <title>ASG - Escape Room</title>
 </head>
 <body>
     <custom-comp id="header" src="/components/header.html"></custom-comp>
-    <custom-comp src="/components/Szene_01_Gasse/"></custom-comp>
+    <custom-comp id="scene" src="/components/scene02.html"></custom-comp>
+    <custom-comp id="footer" src="/components/footer.html"></custom-comp>
 </body>
 </html>
