changed src to name

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>ASG - Escape Room</title>
 </head>
 <body>
-    <custom-comp id="header" src="/components/header.html"></custom-comp>
-    <custom-comp id="scene" src="/components/scene02.html"></custom-comp>
-    <custom-comp id="footer" src="/components/footer.html"></custom-comp>
+    <custom-comp id="header" name="header" ></custom-comp>
+    <custom-comp id="scene" name="scene02" ></custom-comp>
+    <custom-comp id="footer" name="" ></custom-comp>
 </body>
 </html>
