--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <custom-comp id="header" name="header" ></custom-comp>
-    <custom-comp id="scene" name="scene02" ></custom-comp>
-    <custom-comp id="footer" name="" ></custom-comp>
+    <custom-comp id="scene-sel" name="scene_sel"></custom-comp>
+    <custom-comp id="scene" name="Szene_01_Gasse/index" ></custom-comp>
+    <custom-comp id="footer" name="footer" ></custom-comp>
 </body>
 </html>
