--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/styles/import.css">
     <script type="module" src="components/Szene_01_Gasse/index.js"></script>
     <script type="module" src="core/app.js"></script>
+    <script type="module" src="modules/secene-sel.js"></script>
     <title>ASG - Escape Room</title>
 </head>
 <body>
