--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <custom-comp id="header" name="header" ></custom-comp>
     <custom-comp name="scene-sel"></custom-comp>
-    <custom-comp id="scene" name="Szene_05_Haus_außen/index" ></custom-comp>
+    <custom-comp id="scene" name="Szene_01_Gasse/index" ></custom-comp>
     <custom-comp id="footer" name="" ></custom-comp>
 </body>
 </html>
