--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <custom-comp id="header" name="header" ></custom-comp>
-    <custom-comp id="scene" name="Szene_05_Haus_außen/index" ></custom-comp>
+    <custom-comp id="scene-sel" name="scene-sel"></custom-comp>
+    <custom-comp id="scene" name="Szene_01_Gasse/index" ></custom-comp>
     <custom-comp id="footer" name="" ></custom-comp>
 </body>
 </html>
